--- a/templates/purchases/purchases.html
+++ b/templates/purchases/purchases.html
@@ -5,6 +5,8 @@
     <h2 class="mb-0"><i class="fa-solid fa-file-invoice-dollar me-2"></i> Purchase Records</h2>
     <a href="{{ url_for('new_purchase') }}" class="btn btn-primary"><i class="fa-solid fa-plus me-1"></i> Add New Purchase</a>
 </div>
+
+<link rel="stylesheet" href="{{ url_for('static', filename='css/purchase.css') }}">
 <div class="card shadow-sm">
     <div class="card-body">
         <table class="table table-hover align-middle">
@@ -48,5 +50,6 @@
     </div>
 </div>
 {% endblock %}
+
 
 
