--- a/templates/suppliers/suppliers.html
+++ b/templates/suppliers/suppliers.html
@@ -27,6 +27,16 @@
                     <td class="text-center">
                         <a href="{{ url_for('supplier_ledger', supplier_id=supplier.id) }}" class="btn btn-sm btn-outline-primary">View Ledger</a>
                         <a href="{{ url_for('edit_supplier', supplier_id=supplier.id) }}" class="btn btn-sm btn-outline-secondary">Edit</a>
+
+                         <form action="{{ url_for('delete_supplier', supplier_id=supplier.id) }}"
+          method="POST"
+          style="display:inline;"
+          onsubmit="return confirm('Are you sure you want to delete this supplier? This action will also remove all purchases and payments related to this supplier.')">
+        <button type="submit" class="btn btn-sm btn-outline-danger">
+            Delete
+        </button>
+    </form>
+                        
                     </td>
                 </tr>
                 {% else %}
@@ -37,4 +47,5 @@
     </div>
 </div>
 {% endblock %}
+
 
